add files :sparckels:

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "release": "release-it"
   },
   "author": "",
   "license": "MIT",
@@ -16,7 +17,8 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "release-it": "^17.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -26,5 +28,10 @@
       "tsx",
       "mjs"
     ]
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
